# semantrix-python

./: .gitattributes  .gitignore  ADVANCED_METRICS_IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_IMPROVEMENTS_SUMMARY.md  METRICS_INTEGRATION_SUMMARY.md  README.md  README_redis_integration.md  TOMBSTONE_IMPLEMENTATION_TODO.md  pyproject.toml  requirements-all.txt  requirements.txt  setup.cfg  setup.py  test_policy_refactor.py
docs/: cache_store_guide.md  cache_stores.md  delete_operations_guide.md  reliability_guide.md
examples/: README_demos.md  basic_demo.py  cache_store_architecture.py  custom_implementations.py  delete_operations_example.py  distributed_cache_example.py  embedding_examples.py  explain_usage.py  logging_demo.py  metrics_demo.py  minimal_demo.py  opentelemetry_demo.py  opentelemetry_integration_example.py  policy_pattern_example.py  redis_cache_store.py  simple_demo.py  simple_redis_usage.py  vector_stores_example.py
semantrix/: __init__.py  client.py  exceptions.py
semantrix/cache_store/: __init__.py  base.py  eviction.py  eviction_policies.py  strategies.py
semantrix/cache_store/stores/: __init__.py  documentdb.py  dynamodb.py  elasticache.py  google_memorystore.py  in_memory.py  memcached.py  mongodb.py  postgresql.py  redis.py  sqlite.py
semantrix/core/: cache.py
semantrix/embedding/: __init__.py  base.py  embedding.py
semantrix/embedding/embedders/: __init__.py  cohere_embedder.py  langchain_embedder.py  mistral_embedder.py  ollama_embedder.py  openai_embedder.py  sentence_transformer_embedder.py
semantrix/embedding/implementations/: __init__.py  onnx_embedder.py  sentence_transformer_embedder.py
semantrix/integrations/: langchain.py  opentelemetry.py
semantrix/models/: __init__.py  explain.py
semantrix/tests/: test_cache.py  test_embedding.py  test_performance.py
semantrix/utils/: __init__.py  circuit_breaker.py  datetime_utils.py  logging.py  logging_config.py  metrics.py  profiling.py  redis_helpers.py  resource_limits.py  retry.py  serialization.py  timeout.py  twophase.py  validation.py  wal.py
semantrix/utils/twophase/: __init__.py  coordinator.py  interfaces.py  operation.py  participant.py  participants.py  wal_adapter.py
semantrix/vector_store/: __init__.py  base.py  vector_store.py
semantrix/vector_store/stores/: chroma.py  faiss.py  milvus.py  pgvector.py  pinecone.py  qdrant.py  redis.py
tests/: run_integration_tests.py  test_2pc_integration.py  test_cache_store_dynamodb.py  test_cache_store_elasticache.py  test_cache_store_google_memorystore.py  test_circuit_breaker.py  test_delete_operations.py  test_exceptions.py  test_logging.py  test_opentelemetry_integration.py  test_retry.py  test_timeout.py  test_validation.py  test_validation_enhanced.py
tests/core/: test_cache.py
tests/mocks/: mock_failing_vector_store.py  mock_stores.py  mock_vector_store.py
tests/vector_store/: test_chroma.py  test_milvus.py  test_pgvector.py  test_pinecone.py  test_qdrant.py  test_redis.py
