[metadata]
description_file = README.md
license_files = LICENSE
license = SSPL-1.0
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0  # This will be overridden by setup.py

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = 
    tests*
    examples*
    docs*
    .github*
    .vscode*

[options.extras_require]
# Cache store backends
dynamodb = 
    boto3>=1.26.0
elasticache = 
    redis>=4.3.0
google-memorystore = 
    google-cloud-redis>=2.0.0
sqlite = 
    aiosqlite>=0.17.0
mongodb = 
    motor>=3.0.0
postgresql = 
    asyncpg>=0.25.0
documentdb = 
    pymongo>=4.0.0

# Embedding models
sentence-transformers = 
    sentence-transformers>=2.2.0
onnx = 
    onnxruntime>=1.12.0

# Vector stores
faiss = 
    faiss-cpu>=1.7.0
chroma = 
    chromadb>=0.4.0
pinecone = 
    pinecone-client>=2.2.0
qdrant = 
    qdrant-client>=1.1.0
milvus = 
    pymilvus>=2.2.0

# Development
dev = 
    pytest>=7.0.0
    pytest-asyncio>=0.20.0
    pytest-cov>=4.0.0
    black>=22.0.0
    isort>=5.0.0
    mypy>=0.990
    types-requests>=2.28.0
    types-python-dateutil>=2.8.0

# Documentation
docs = 
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.15.0
    myst-parser>=0.18.0

# All optional dependencies
all = 
    boto3>=1.26.0
    redis>=4.3.0
    google-cloud-redis>=2.0.0
    aiosqlite>=0.17.0
    motor>=3.0.0
    asyncpg>=0.25.0
    pymongo>=4.0.0
    sentence-transformers>=2.2.0
    onnxruntime>=1.12.0
    faiss-cpu>=1.7.0
    chromadb>=0.4.0
    pinecone-client>=2.2.0
    qdrant-client>=1.1.0
    pymilvus>=2.2.0

[options.package_data]
* = py.typed

[egg_info]
tag_build = 
tag_date = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores =
    # Allow import * in __init__.py files
    __init__.py: F403,F401
    # Allow non-top-level imports in test files
    tests/*.py: E402

[coverage:run]
source = semantrix
omit = 
    */tests/*
    */__init__.py

[coverage:report]
show_missing = true
skip_covered = true

[test]
addopts = -v --asyncio-mode=auto
asyncio_mode = auto
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
